--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "ICONOGRAPRHICS"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Computational Understanding of Iconography and Narration in Visual Cultural Heritage" # site tagline that appears below site title in masthead
 name                     : "Prathmesh Madhu"
 description              : "A PhD summary of my research about scene understanding for heterogeneous artworks, humanities and computer vision."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
